Changed emergence return